--- a/templates/projets/index.html.twig
+++ b/templates/projets/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Projets index{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('/css/style.css') }}">
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('home') }}">
+                        <a class="nav-link" aria-current="page" href="{{ path('home') }}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
                                 <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
                             </svg>
@@ -26,7 +26,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('projets_index') }}">Projets</a>
+                        <a class="nav-link active" href="{{ path('projets_index') }}">Projets</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
@@ -49,46 +49,40 @@
                 </div>
             {% endfor %}
         {% endfor %}
-        <div class="row row-cols-1 row-cols-md-3 g-4 ms-3 me-3">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="\img\Dev_KynZo_1.jpg" class="card-img-top" alt="Dev_KynZo">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">50 %</div>
-                        </div>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a short card.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
+        <h2>Projets index</h2>
+        <div class="table-responsive ms-3 me-3">
+            <table class="table align-middle table-striped table-hover">
+                <thead class="table table-dark">
+                    <tr>
+                        <th>Projet N°</th>
+                        <th>ImgProjet</th>
+                        <th>Titre</th>
+                        <th>Description</th>
+                        <th>Progression</th>
+                        <th>actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for projet in projets %}
+                    <tr>
+                        <td>{{ projet.id }}</td>
+                        <td>{{ projet.ImgProjet }}</td>
+                        <td>{{ projet.Titre }}</td>
+                        <td>{{ projet.Description }}</td>
+                        <td>{{ projet.Progress }} %</td>
+                        <td>
+                            <a href="{{ path('projets_show', {'id': projet.id}) }}">show</a>
+                            <a href="{{ path('projets_edit', {'id': projet.id}) }}">edit</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="6">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            <a href="{{ path('projets_new') }}">Create new</a>
         </div>
     </main>
     <footer class="border mt-4">
