--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -7,6 +7,7 @@
         <div class="col-md-6 mx-auto text-center">
             <h1>About</h1>
             <img class="rounded mx-auto d-block" src="{{ asset('/img/KynZo_Logo.jpg') }}" alt="Logo-KynZo">
+            <a href="{{ path(app.request.get('_route')) }}">back to list</a>
         </div>
     </div>
 {% endblock %}
