--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,3 +17,17 @@
 nav {
     box-shadow: 0px 10px 10px grey;
 }
+.alert {
+    padding: 10px;
+    color:white;
+    text-align: center;
+}
+.alert-success {
+    background-color: green;
+}
+.alert-error {
+    background-color: red;
+}
+.alert-info {
+    background-color: blue;
+}
