--- a/templates/projets/edit.html.twig
+++ b/templates/projets/edit.html.twig
@@ -79,6 +79,6 @@
         </div>
     </main>
     <footer class="border mt-5 shadow p-3 mb-5 bg-body rounded d-flex justify-content-center align-items-center">
-        <div class="">&copy; Copyright {{ 'now'|date('Y') }} &middot; <a href="{{ path('about') }}">About US</a></div>
+        <div class="text-muted">&copy; Copyright {{ 'now'|date('Y') }} &middot; <a href="{{ path('about') }}">About US</a></div>
     </footer>
 {% endblock %}
