--- a/templates/projets/new.html.twig
+++ b/templates/projets/new.html.twig
@@ -75,11 +75,11 @@
 
                 {{ include('projets/_form.html.twig') }}
 
-                <a href="{{ path('projets_index') }}">back to list</a>
+                <a class="btn btn-outline-secondary btn-sm mb-1" href="{{ path('projets_index') }}">Retour</a>
             </div>
         </div>
     </main>
     <footer class="border mt-5 shadow p-3 mb-5 bg-body rounded d-flex justify-content-center align-items-center">
-        <div class="">&copy; Copyright {{ 'now'|date('Y') }} &middot; <a href="{{ path('about') }}">About US</a></div>
+        <div class="text-muted">&copy; Copyright {{ 'now'|date('Y') }} &middot; <a href="{{ path('about') }}">About US</a></div>
     </footer>
 {% endblock %}
