--- a/templates/projets/new.html.twig
+++ b/templates/projets/new.html.twig
@@ -75,7 +75,7 @@
 
                 {{ include('projets/_form.html.twig') }}
 
-                <a class="btn btn-outline-secondary btn-sm mb-1" href="{{ path('projets_index') }}">Retour</a>
+                <a class="btn btn-outline-secondary btn-sm mt-1" href="{{ path('projets_index') }}">Retour</a>
             </div>
         </div>
     </main>
