--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -70,7 +70,7 @@
             {% for projet in projets %}
                 <div class="col ">
                     <div class="card h-100 shadow p-3 mb-5 bg-body rounded">
-                        <img src="{{ projet.ImgProjet }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
+                        <img src="{{ asset('/img/uploads/' ~ projet.ImgProjet) }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
                         <div class="card-body">
                             <h5 class="card-title"><a class="link-dark" href="{{ path('projets_show', {'id': projet.id}) }}">{{ projet.Titre }}</a></h5>
                             <div class="progress">
