--- a/templates/projets/show.html.twig
+++ b/templates/projets/show.html.twig
@@ -68,7 +68,7 @@
     <main>
         <h1 class="text-center">Détail projet</h1>
         <div class="card mb-3 col-md-6 mx-auto border shadow bg-body rounded">
-            <img src="{{ projet.ImgProjet }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
+            <img src="{{ asset('/img/uploads/' ~ projet.ImgProjet) }}" class="card-img-top" alt="{{ projet.Titre }}_IMG">
             <div class="card-body">
                 <h5 class="card-title">{{ projet.Titre }}</h5>
                 <div class="progress">
