--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Dev KynZo About{% endblock %}
+{% block title %}Dev KynZo - About!{% endblock %}
 
 {% block body %}
     <div class="row">
