--- a/templates/projets/edit.html.twig
+++ b/templates/projets/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Projets{% endblock %}
+{% block title %}Dev KynZo - Edit Projet!{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('/css/style.css') }}">
