--- a/templates/projets/show.html.twig
+++ b/templates/projets/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Projets{% endblock %}
+{% block title %}Dev KynZo - Detail Projet!{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('/css/style.css') }}">
